@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.400 2005/09/30 20:33:29 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.401 2005/10/01 16:04:49 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  1 Oct 2005; Andrew Gaffney <agafney@gentoo.org>
+  src/net/server/gliserv.py:
+  allow for param to be passed multiple times in GET
 
   30 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/client/gliclient.py:
